# cobs2-rs

./: .gitignore  Cargo.toml  README.md
src/: cobs.rs  cobsr.rs  lib.rs  main.rs
tests/: test_cobs.rs  test_cobsr.rs
