[package]
name = "cobs"
version = "0.0.1"
authors = ["Craig McQueen <craig.mcqueen@innerrange.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmcqueen/cobs-rs"
keywords = ["byte-stuffing", "rng"]
categories = ["algorithms", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "cobs"
test = false

[lib]
doctest = false
test = false

[features]
default = ["std"]
alloc = []
std = ["alloc"]
