[package]
name = "cobs2"
description = "Consistent Overhead Byte Stuffing — COBS — and variant COBS/R"
version = "0.1.4"
authors = ["Craig McQueen <craig@mcqueen.au>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmcqueen/cobs2-rs"
keywords = ["byte-stuffing", "cobs", "cobsr"]
categories = ["algorithms", "encoding", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bytes = "1.6.0"

[[bin]]
name = "cobs2"
test = false

[lib]
test = false

[features]
default = ["std"]
alloc = []
std = ["alloc"]
